--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build; ln -s ../manifest.json dist/manifest.json",
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
