--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "vite-plugin-static-copy": "^0.9.0",
     "vue": "^3.2.38"
   },
   "devDependencies": {
