--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,5 +20,11 @@
     "management",
     "menus",
     "menus.overrideContext"
-  ]
+  ],
+
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "some-name@example.org"
+    }
+  }
 }
