--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "xpi": "vite build; cd dist; zip -r ../tab-tree-groups.xpi .",
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
