--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,5 +16,11 @@
     "management",
     "menus",
     "menus.overrideContext"
-  ]
+  ],
+
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{9cd6575a-271a-4be3-805c-12323994d88d}"
+    }
+  }
 }
